<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page3">

    <TextView
        android:id="@+id/playerList"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/saveChanges"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRoleSpinner" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="36dp"
        android:text="@string/startGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/editPlayersButton"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/editPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:textAllCaps="false" />

    <TextView
        android:id="@+id/virtualValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="36dp"
        android:text="@string/virtualSum"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/virtualValueNumber"
        android:layout_width="68dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/virtualValueLabel"
        app:layout_constraintTop_toTopOf="@+id/virtualValueLabel" />

    <Spinner
        android:id="@+id/playerListSpinner"
        android:layout_width="368dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNameArea"
        android:layout_width="153dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:hint="@string/nameChoice"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerListSpinner" />

    <Spinner
        android:id="@+id/editRoleSpinner"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="64dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerListSpinner" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/goBack"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRoleSpinner" />

</android.support.constraint.ConstraintLayout>